[package]
name = "kvs"
version = "0.1.0"
edition = "2018"
authors = ["Mikołaj Rosowski <m.rosowski1@wp.pl>"]
description = "A simple Key-Value database"

[lib]
name = "kvs"

[[bin]]
name = "kvs"
test = false
doctest = false

[dependencies]
clap = "2.33.3"

[dev-dependencies]
assert_cmd = "2.0.1"
predicates = "2.0.2"
