[package]
name = "kvs"
version = "0.3.0"
edition = "2018"
authors = ["Mikołaj Rosowski <m.rosowski1@wp.pl>"]
description = "A simple Key-Value database"

[lib]
name = "kvs"

[[bin]]
name = "kvs"
test = false
doctest = false

[dependencies]
clap = "2.33.3"
serde = { version = "1.0.130", features = ["derive"] }
serde_json = "1.0.68"
thiserror = "1.0.29"

[dev-dependencies]
assert_cmd = "2.0.1"
predicates = "2.0.2"
tempfile = "3.2.0"
walkdir = "2.3.2"
